BFAST -- History of visible changes.

Copyright (C) 2008-2009, University of California - Los Angeles
See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.3.4
* Updated balign, bmfconver, bafconvert, and bsort output file names.
* Added gff output in bpostprocess and bafconvert.
* Fixed bug in bpostprocess when specifying the maximum number of 
nt errors.

Version 0.3.3
* A quick fix to remove a memory leak that can causes crashes
when aligning nt space data.

Version 0.3.2
* Updating how we report color errors in .baf files.
* Added a new utility: bmergesorted that merges two files that
have been sorted by bsort.
* Updated bsort to print more information while sorting.  Also,
updated bsort to sort bpostprocess unpaired baf output.
* Update berrordistribution and bpairedenddist to accept any
number of input files.
* Changed bgeterrordistribution to berrordistribution.
* Updated bpostprocess to output unpaired reads when one end
has ambiguity.
* Updated local alignment optimization in balign (-b).
* Updated bsort to take in the maximum number of entries for 
memory management.
* Fixed bug in balign where alignment could not handle switching
directly from an insertion to a deletion (or vice versa).

Version 0.3.1
* Found bug in read simulator.
* Fixing more bugs to do with indels.

Version 0.2.6
* Fixed a bug in breport that caused memory leaks.
* Added support to output unpaired reads in bpostprocess.
* Fixed a bug in balign where the position of indels were
being reported incorrectly for NT space.  This was as a result
of incorporating color space code incorrectly.

Version 0.2.5
* bpairedenddist now outputs to a file instead of stdout.
* Added a new utility balignsim which tests the accuracy of 
various local alignment algorithms implemented by balign.
* Fixed bug in balign when considering indels for color space.

Version 0.2.4
* Added a .sh script to update the tests since the reference