@@ -3,6 +3,8 @@
 
 #include "../blib/AlignEntries.h"
 
+#define BSORT_THREADED_SORT_MIN 100000
+
 typedef struct {
 	int64_t startContig;
 	int64_t startPos;
@@ -13,6 +15,14 @@ typedef struct {
 	char *FileName;
 } TmpFile;
 
+typedef struct {
+	AlignEntries **entriesPtr;
+	int64_t low;
+	int64_t mid;
+	int64_t high;
+	int32_t threadID;
+} ThreadSortData;
+
 void TmpFileOpen(TmpFile*, char*);
 void TmpFileClose(TmpFile*);
 void TmpFileInitialize(TmpFile*);
@@ -20,6 +30,8 @@ void TmpFileUpdateMetaData(TmpFile*, AlignEntries*);
 void TmpFileUpdateMetaDataHelper(TmpFile*, AlignEntry*);
 
 void MoveAllIntoTmpFile(char*, TmpFile*, char*);
-void SplitEntriesAndPrint(FILE*, TmpFile*, char*, int32_t);
+void SplitEntriesAndPrint(FILE*, TmpFile*, char*, int32_t, int32_t);
+void *SortAlignEntriesHelper(void*);
+void *MergeAlignEntriesHelper(void*);
 
 #endif
